@@ -69,7 +69,7 @@ public class Vala.ReturnStatement : Statement {
 
 	public override void replace (CodeNode! old_node, CodeNode! new_node) {
 		if (return_expression == old_node) {
-			return_expression = new_node;
+			return_expression = (Expression) new_node;
 		}
 	}
 }
