@@ -86,7 +86,7 @@ public class Vala.SwitchStatement : Statement {
 
 	public override void replace (CodeNode! old_node, CodeNode! new_node) {
 		if (expression == old_node) {
-			expression = new_node;
+			expression = (Expression) new_node;
 		}
 	}
 }
