@@ -70,7 +70,7 @@ public class Vala.UnaryExpression : Expression {
 
 	public override void replace (CodeNode! old_node, CodeNode! new_node) {
 		if (inner == old_node) {
-			inner = new_node;
+			inner = (Expression) new_node;
 		}
 	}
 }
